claim_indemnification:Allow to override indemnification amount computed by coog (#2433)
Fix #10304

--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -18,12 +18,42 @@ msgstr ""
 "différents et ne permettent pas leur traitement simultané."
 
 msgctxt "error:benefit.rule:"
+msgid ""
+"Annuities generated with forced base amount %(forced_amount)s on a %(frequency)s frequency\n"
+"Therefore, annual annuity amount is %(annual_forced_amount)s\n"
+msgstr ""
+"Les annuites sont generees avec le montant de base force %(forced_amount)s a frequence %(frequency)s\n"
+"Par consequent, le montant annuel d'annuite est %(annual_forced_amount)s\n"
+
+msgctxt "error:benefit.rule:"
+msgid "Capital forced amount %(forced_amount)s\n"
+msgstr "Montant force de capital %(forced_amount)s\n"
+
+msgctxt "error:benefit.rule:"
+msgid ""
+"Indemnification computed with forced base amount %(forced_amount)s\n"
+"Indemnification amount is %(forced_amount)s * %(nb_of_unit)s = %(amount)s\n"
+msgstr ""
+"Indemnisation calculee avec le montant de base force %(forced_amount)s\n"
+"Le montant de l'indemnisation est %(forced_amount)s * %(nb_of_unit)s = %(amount)s\n"
+
+msgctxt "error:benefit.rule:"
 msgid "No indemnification rule defined"
 msgstr "Aucune règle d'indemnisation définie"
 
 msgctxt "error:benefit.rule:"
 msgid "Share for current beneficiary : %(share)s %%"
 msgstr "Répartition pour le bénéficiaire courant : %(share)s %%"
+
+msgctxt "error:benefit.rule:"
+msgid ""
+"The prorata for this period is %(prorata)s / %(ratio)s = %(prorata_on_ratio)s\n"
+"The amount per day is %(annual_forced_amount)s / %(ratio)s = %(amount_per_unit)s \n"
+"The annuity amount is %(amount_per_unit)s * %(prorata)s = %(annuity_amount)s \n"
+msgstr ""
+"Le prorata pour cette periode est %(prorata)s / %(ratio)s = %(prorata_on_ratio)s\n"
+"Le montant par unite est %(annual_forced_amount)s / %(ratio)s = %(amount_per_unit)s\n"
+"Le montant de la rente est %(amount_per_unit)s * %(prorata)s = %(annuity_amount)s\n"
 
 msgctxt "error:benefit.rule:"
 msgid "Total after share : %(amount).2f"
@@ -236,6 +266,10 @@ msgid ""
 msgstr ""
 "Il ne peut pas y avoir plusieurs indemnisations de type capital pour un "
 "bénéficiaire donné, l'existante sera annulée"
+
+msgctxt "error:event.type.action:"
+msgid "Create Non Periodic Invoices"
+msgstr "Créer les quittances non périodiques"
 
 msgctxt "field:account.invoice.line,claim_detail:"
 msgid "Claim Detail"
@@ -656,6 +690,14 @@ msgctxt "field:claim.indemnification,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
+msgctxt "field:claim.indemnification,forced_base_amount:"
+msgid "Forced Base Amount"
+msgstr "Montant de base forcé"
+
+msgctxt "field:claim.indemnification,has_end_date:"
+msgid "With End Date"
+msgstr "Avec Date de Fin"
+
 msgctxt "field:claim.indemnification,id:"
 msgid "ID"
 msgstr "ID"
@@ -1036,6 +1078,10 @@ msgctxt "field:claim.indemnification.detail,extra_summary:"
 msgid "Extra Summary"
 msgstr "Résumé complémentaire"
 
+msgctxt "field:claim.indemnification.detail,forced_base_amount:"
+msgid "Forced Base Amount"
+msgstr "Montant de base forcé"
+
 msgctxt "field:claim.indemnification.detail,id:"
 msgid "ID"
 msgstr "ID"
@@ -1168,6 +1214,10 @@ msgctxt "field:claim.indemnification_definition,beneficiary_share:"
 msgid "Beneficiary Share"
 msgstr "Part du bénéficiaire"
 
+msgctxt "field:claim.indemnification_definition,currency_digits:"
+msgid "Currency Digits"
+msgstr "Précision de la devise"
+
 msgctxt "field:claim.indemnification_definition,end_date:"
 msgid "End Date"
 msgstr "Date de fin"
@@ -1175,6 +1225,15 @@ msgstr "Date de fin"
 msgctxt "field:claim.indemnification_definition,extra_data:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
+
+msgctxt "field:claim.indemnification_definition,forced_base_amount:"
+msgid "Forced Base Amount"
+msgstr "Montant de base forcé"
+
+msgctxt ""
+"field:claim.indemnification_definition,forced_base_amount_display_access:"
+msgid "Forced Base Amount Display Access"
+msgstr "Accès à l'affichage du champ montant de base forcé"
 
 msgctxt "field:claim.indemnification_definition,id:"
 msgid "ID"
@@ -1227,6 +1286,15 @@ msgstr "Montant annulé"
 msgctxt "field:claim.indemnification_regularisation,currency_digits:"
 msgid "Currency Digits"
 msgstr "Précision"
+
+msgctxt "field:claim.indemnification_regularisation,forced_base_amount:"
+msgid "Forced Base Amount"
+msgstr "Montant de base forcé"
+
+msgctxt ""
+"field:claim.indemnification_regularisation,forced_base_amount_display_access:"
+msgid "Forced Base Amount Display Access"
+msgstr "Accès à l'affichage du montant de base forcé"
 
 msgctxt "field:claim.indemnification_regularisation,id:"
 msgid "ID"
@@ -1281,6 +1349,10 @@ msgctxt "field:claim.select_service,event_desc:"
 msgid "Event Description"
 msgstr "Fait générateur"
 
+msgctxt "field:claim.select_service,has_end_date:"
+msgid "With End Date"
+msgstr "Avec Date de Fin"
+
 msgctxt "field:claim.select_service,id:"
 msgid "ID"
 msgstr "ID"
@@ -1304,10 +1376,6 @@ msgstr "Prestation sélectionnée"
 msgctxt "field:claim.select_service,start_date:"
 msgid "Loss Date"
 msgstr "Date"
-
-msgctxt "field:claim.select_service,has_end_date:"
-msgid "With End Date"
-msgstr "Avec Date de Fin"
 
 msgctxt "field:claim.service,annuity_frequency:"
 msgid "Annuity Frequency"
@@ -1393,9 +1461,36 @@ msgstr ""
 "Si coché, la date de taxe pour les quittances sera la date de "
 "l'indemnisation. Sinon, la date de taxe sera la date de la quittance"
 
+msgctxt "help:claim.indemnification,forced_base_amount:"
+msgid ""
+"This amount is a daily amount if indemnification kind is period, annual if "
+"the kind is annuity, and the capital's amount if the kind is a capital"
+msgstr ""
+"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
+" \"Capital\" "
+
 msgctxt "help:claim.indemnification_definition,beneficiary:"
 msgid "The party to which the indemnification will be paid"
 msgstr "Le tiers auquel sera versé l'indemnisation"
+
+msgctxt "help:claim.indemnification_definition,forced_base_amount:"
+msgid ""
+"This amount is a daily amount if indemnification kind is period, annual if "
+"the kind is annuity, and the capital's amount if the kind is a capital"
+msgstr ""
+"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
+" \"Capital\" "
+
+msgctxt ""
+"help:claim.indemnification_definition,forced_base_amount_display_access:"
+msgid ""
+"This field determines if the current user has the right to see the field "
+"\"Forced Base Amount\""
+msgstr ""
+"Ce champ détermine si l'utilisateur courant a le droit de visualiser le "
+"champ \"Montant de base forcé\""
 
 msgctxt "help:claim.indemnification_definition,indemnification_date:"
 msgid ""
@@ -1404,6 +1499,24 @@ msgid ""
 msgstr ""
 "Pour les indemnisations de type \"capital\", la date à laquelle "
 "l'indemnisation sera versée"
+
+msgctxt "help:claim.indemnification_regularisation,forced_base_amount:"
+msgid ""
+"This amount is a daily amount if indemnification kind is period, annual if "
+"the kind is annuity, and the capital's amount if the kind is a capital"
+msgstr ""
+"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
+" \"Capital\" "
+
+msgctxt ""
+"help:claim.indemnification_regularisation,forced_base_amount_display_access:"
+msgid ""
+"This field determines if the current user has the right to see the field "
+"\"Forced Base Amount\""
+msgstr ""
+"Ce champ détermine si l'utilisateur courant a le droit de visualiser le "
+"champ \"Montant de base forcé\""
 
 msgctxt "help:claim.service,can_be_indemnified:"
 msgid "Indicates if a service can be used to create indemnifications"
