--- a/modules/claim/locale/fr.po
+++ b/modules/claim/locale/fr.po
@@ -98,11 +98,11 @@ msgstr "Le code doit être unique !"
 
 msgctxt "error:claim:"
 msgid ""
-"Declaration date cannot be in the future, or posterior to the claim\'s "
+"Declaration date cannot be in the future, or posterior to the claim's "
 "creation date"
 msgstr ""
-"La date de déclaration ne peut être dans le futur, ou postérieure à la date "
-"de création du dossier"
+"La date de déclaration ne peut pas être dans le futur, ou postérieure à la "
+"date de création du sinistre."
 
 msgctxt "error:claim:"
 msgid ""
