claim_indemnification: fix annuity rule (#2437)
Fix #0000

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Fix annuity rule
 * FEA#10383 Allow to override an indemnification base amount
 * BUG#10477 The pivot dates calculation function could fail with a synchronization day on the 30th
 * BUG#10275 Prevent tax reverse compute when total amount of indemnification is zero
