--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Réparer la règle de rente
 * FEA#10383 Permettre de déroger au montant de l'indemnisation calculée par COOG
 * BUG#10477 La fonction de calcul des dates pivots pouvait échouer avec un jour de synchronisation au 30 du mois
 * BUG#10275 Empêcher le retro-calcul de taxes quand le montant de l'indemnisation est zéro
