claim_indemnification: Fix annuities periode computation (#2430)
* claim_salary_fr: Fix annuities periode computation 


Fix #10596

--- a/modules/claim_group_life_fr/doc/en/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10596 Fix annuities periods computation
 * BUG#10307 Fix in default deduction rule
 * OTH#00000 Use numeric instead of integer for TA, TB, TC rates
 * FEA#10124 Add default LTD rules
