claim_indemnification: Improve is_paid performances (#2427)
Fix #10587

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10587 Improve performances when detecting payment status of an indemnification
 * OTH#0000 Fix annuity rule
 * FEA#10383 Allow to override an indemnification base amount
 * BUG#10477 The pivot dates calculation function could fail with a synchronization day on the 30th
