claim_salary_fr: add salaries relate on claim (#2419)
Fix #10556

--- a/modules/claim_salary_fr/locale/fr.po
+++ b/modules/claim_salary_fr/locale/fr.po
@@ -118,6 +118,10 @@ msgctxt "field:claim.net_calculation_rule,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:claim.salary,claim:"
+msgid "Claim"
+msgstr "Sinistre"
+
 msgctxt "field:claim.salary,color:"
 msgid "Color"
 msgstr "Couleur"
@@ -182,10 +186,6 @@ msgctxt "field:claim.salary,net_salary:"
 msgid "Net Salary"
 msgstr "Salaire net"
 
-msgctxt "field:claim.salary,net_salary:"
-msgid "Net Salary Bonus"
-msgstr "Prime (nette)"
-
 msgctxt "field:claim.salary,rec_name:"
 msgid "Record Name"
 msgstr "Nom"
@@ -229,6 +229,10 @@ msgstr "Salaire brut"
 msgctxt "field:claim.service,net_salary:"
 msgid "Gross Salary"
 msgstr "Salaire brut"
+
+msgctxt "field:claim.service,net_salary_bonus:"
+msgid "Net Salary Bonus"
+msgstr "Primes nettes"
 
 msgctxt "field:claim.service,salary:"
 msgid "Salary"
@@ -520,6 +524,10 @@ msgctxt "model:ir.action,name:act_net_calculation_rule_form"
 msgid "Net Calculation Rules"
 msgstr "Règles de calcul pour le net"
 
+msgctxt "model:ir.action,name:act_salaries_list"
+msgid "Salaries"
+msgstr "Salaires"
+
 msgctxt "model:ir.action,name:salaries_wizard"
 msgid "Salaries Computation Wizard"
 msgstr "Assistant de saisie des salaires"
@@ -589,7 +597,7 @@ msgid ""
 "changement_taux: Changement de valeur du point\n"
 "date_anniversaire_1er_revalo: A la date anniversaire de la 1ere revalo\n"
 "01/01/YEARLY: Tous les 1er janvier\n"
-"01/07/YEARLY: Tous les 1er juillet  "
+"01/07/YEARLY: Tous les 1er juillet"
 msgstr ""
 "changement_taux: Changement de valeur du point\n"
 "date_anniversaire_1er_revalo: A la date anniversaire de la 1ere revalo\n"
