underwriting: improve ui (#2425)
* claim_underwriting: enrich descriptions of underwriting relate view from claim

Fix #10506

* underwriting: add wizard to open just generated underwriting

* add translations

* fix typos in translations

* fix flake8

* answer jean

* fix flake8

* fix translations

* move tab, fix translations

--- a/modules/underwriting/doc/en/CHANGELOG
+++ b/modules/underwriting/doc/en/CHANGELOG
@@ -1,3 +1,6 @@
+* FEA#10506 Change the display of underwriting lists: add a new tab for draft underwritings
+* FEA#10506 Add a wizard that allows the user to immediatly see an underwriting that was automatically generated
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
