--- a/modules/underwriting_claim/locale/fr.po
+++ b/modules/underwriting_claim/locale/fr.po
@@ -12,10 +12,6 @@ msgstr ""
 "\n"
 "%(claims)s"
 
-msgctxt "error:underwriting.start:"
-msgid "Cannot start a new underwriting process on a closed claim"
-msgstr "Impossible de démarrer une demande sur un sinistre clôturé"
-
 msgctxt "field:benefit,underwriting_rule:"
 msgid "Underwriting Rule"
 msgstr "Règle de demande de décisions"
@@ -32,6 +28,10 @@ msgctxt "field:claim.service,underwritings:"
 msgid "Underwritings"
 msgstr "Demandes de décisions"
 
+msgctxt "field:underwriting,document_request_descriptions:"
+msgid "Document Requests Descriptions"
+msgstr "Demandes de documents"
+
 msgctxt "field:underwriting,insurers:"
 msgid "Insurers"
 msgstr "Assureurs"
@@ -39,6 +39,10 @@ msgstr "Assureurs"
 msgctxt "field:underwriting,insurers_names:"
 msgid "Insurers"
 msgstr "Assureurs"
+
+msgctxt "field:underwriting,result_descriptions:"
+msgid "Decision Descriptions"
+msgstr "Décisions"
 
 msgctxt "field:underwriting.result,claim:"
 msgid "Claim"
