migrator_contact_group: Iteration to add full_management_start column (#2441) [FROM 2.2] (#2446)
2441)

Fix #00000

--- a/modules/migrator_contract_group/doc/en/CHANGELOG
+++ b/modules/migrator_contract_group/doc/en/CHANGELOG
@@ -2,4 +2,5 @@
 * OTH#00000 Various fixes (iteration)
 * OTH#00000 Various fixes (iteration)
 * OTH#00000 Various fixes (iteration)
+* OTH#00000 Various fixes (iteration)
 * FEA#00000 Module creation
