--- a/modules/migrator_contract_group/doc/fr/CHANGELOG
+++ b/modules/migrator_contract_group/doc/fr/CHANGELOG
@@ -2,4 +2,5 @@
 * OTH#00000 Divers correctifs (itération)
 * OTH#00000 Divers correctifs (itération)
 * OTH#00000 Divers correctifs (itération)
+* OTH#00000 Divers correctifs (itération)
 * FEA#00000 Création du module
