claim_indemnification: Create a wizard and a batch to verify amount of new created indemnification (#2412) [FROM 2.2] (#2448)
Fix #10531

--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10531 Ajout d'un assistant et d'un batch de vérification de données sinistres migrées (recalcul d'indemnisations)
 * BUG#10587 Améliorations des performances de la détection du statut du règlement des indemnisations
 * OTH#0000 Réparer la règle de rente
 * FEA#10383 Permettre de déroger au montant de l'indemnisation calculée par COOG
