--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10531 Add wizard and batch to check claim migrated datas (indemnification computation)
 * BUG#10587 Improve performances when detecting payment status of an indemnification
 * OTH#0000 Fix annuity rule
 * FEA#10383 Allow to override an indemnification base amount
