--- a/modules/claim_group_life_fr/doc/en/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10631 Fix computation of annuities periods amounts
 * BUG#10596 Fix annuities periods computation
 * BUG#10307 Fix in default deduction rule
 * OTH#00000 Use numeric instead of integer for TA, TB, TC rates
