--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10576 Lorsque dans le même fichier CR, il y a un CR pour un siren et un CR pour un affilié à ce SRIEN, l'information du CR de la société est propagée à l'ensemble des CR des affiliés. De plus, le CR d'intégration d'un assuré peut être différent du CR d'intégration d'une période (ce qui n'était pas géré)
 * OTH#00000: Iteration sur #10393: afficher les informations détailléés de la personne dans le nom de la tâche
 * BUG#10443: Correction d'un crash lors de l'ouverture de la vue des tâches lorsque des tâches prestij sont présentes
 * FEA#10393: Amélioration de l'affichage des tâches BPIJ avec possibilités de filtrer par Société/Assurés
