contract_insurance: remove unicity constraint on covered element party per contract (#2411)
Fix #10418

--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -3,10 +3,12 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:contract.covered_element:"
-msgid "The party cannot be added more than once on the same contract"
+msgid ""
+"You are trying to create duplicate covered elements on contracts:\n"
+" %s"
 msgstr ""
-"Un tiers ne peut pas être ajouté plus d'une fois sur le même contrat en tant"
-" que personne couverte"
+"Vous essayez de créer des éléments couverts en doublon sur les contrats:\n"
+"%s"
 
 msgctxt "error:contract.manage_exclusion:"
 msgid "At least one exclusion must be selected"
