--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10418 The unicity constraint on the covered elements' party per contract blocks some business cases
+
 Version 2.2 - 2018-10-12
 * FEA#10055 Add configuration to show the covered element's name when editing it
 * OTH#0000 Also look for extra data in parent covered elements
