--- a/modules/contract_insurance/doc/fr/CHANGELOG
+++ b/modules/contract_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10418 La contrainte d'unicité sur les tiers des éléments couverts par contrat bloque certains cas métier
+
 Version 2.2 - 2018-10-12
 * FEA#10055 Ajout de configuration pour afficher le nom lors de la saisie d'un élément couvert
 * OTH#0000 Recherche des données complémentaires dans les éléments couverts parent
