--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10632 L'information du matricule ne doit pas être utilisée pour rechercher un assuré
+* BUG#10632 Correction du traitement du fichier CRM nominatif suite au passage à python 3
 * OTH#00000: Correction d'un crash à la génération d'un fichier Pasrau suite à la modification du paramétrage de la comptabilité dans tryton 5.0.
 * BUG#10466: Correction d'erreur dans l'alimentation de balises Pasrau. Le bordereau est généré le dernier jour du mois: S21.G00.20.006 doit être rempli avec le premier jour du mois et S21.G00.20.007 avec le dernier jour du mois. S21.G00.30.002 doit être rempli avec le nom de naissance si défini sinon avec le nom et S21.G00.30.003 doit rempli avec le nom si le nom de naissance est saisi sinon la balise ne doit pas être envoyé.
 * BUG#10454: Correction du montant affiché sur une indemnisation dans le cas ou une taxe pasrau s'applique et où le taux par défaut retourné par la table des taux par défaut est différent entre le montant TTC et HT. Cela génère alors un remboursement erroné.
