premium: Compute premium dates from initial_start_date (#2445)
Fix #10625

--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10625 Compute premium dates based on the initial start date rather than that of the current term
+
 Version 2.2 - 2018-10-12
 * BUG#9621 Properly recalculate aperiodic premiums when forced
 
