--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10694 CRM file can contain duplicate blocks
+* BUG#10698 Only rely on indemnification data to identify parties to declare, and not on invoice data
 * BUG#10632 Matricule information must not be used to search insured (only ssn must be used)
 * BUG#10632 Fix CRM nominatif file import following python 3 change
 * OTH#00000: Fix pasrau file generation error due to accounting change in 5.0
