--- a/modules/process_cog/doc/fr/CHANGELOG
+++ b/modules/process_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10594 Gestion du cas où aucune trace du processus n'existe lorsqu'on relance un processus
+
 Version 2.2 - 2018-10-12
 * FEA#8975 Amélioration de la gestion de l'étape d'activation sur un devis
 
