--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10572 Ne pas copier le lien vers les garanties lors de la duplication d'une prestation
 * BUG#10598 Traduction du message d'erreur de la date de déclaration.
 * FEA#10291 Avoir la possibilité de délivrer une prestation plusieurs fois dans le même sinistre
 * BUG#10120 Amélioration du message d'erreur en cas de saisie d'une date de déclaration invalide
