--- a/modules/dsn_standard/doc/en/CHANGELOG
+++ b/modules/dsn_standard/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* BUG#10714 Locality field must be normalized to ascii alphanumeric only
 * OTH#0000 Fix dsn standard following test on NetEntreprise portal 
 * Module creation
