--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Suppression de la vue mixte dans les assistants de contrôle / validation d'indemnisations pour résoudre des problèmes de performance
 * FEA#10531 Ajout d'un assistant et d'un batch de vérification de données sinistres migrées (recalcul d'indemnisations)
 * BUG#10587 Améliorations des performances de la détection du statut du règlement des indemnisations
 * OTH#0000 Réparer la règle de rente
