claim_reporting: add claim reporting default template (#2449)
Fix #9817

--- a/modules/claim_reporting/doc/fr/CHANGELOG
+++ b/modules/claim_reporting/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9817 Mise en place du modèle de courrier stock sinistres
 * FEA#10435 Permettre l'utilisation de rapports de sinistres sans l'obligation d'installer les modules liés aux commissions pas forcément nécessaires
 
 Version 2.2 - 2018-10-12
