--- a/modules/claim_reporting/doc/en/CHANGELOG
+++ b/modules/claim_reporting/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9817 Set up of the claim reporting template
 * FEA#10435 Enable using claim reporting without installing sometimes unnecessary commission related modules
 
 Version 2.2 - 2018-10-12
