--- a/modules/claim_reporting/locale/fr.po
+++ b/modules/claim_reporting/locale/fr.po
@@ -59,6 +59,7 @@ msgctxt "model:ir.ui.menu,name:menu_report_insurer_claim"
 msgid "Insurer Report Claim"
 msgstr "Rapport assureur: sinistes"
 
+
 msgctxt "wizard_button:claim_reporting.claim,configure_report,end:"
 msgid "Cancel"
 msgstr "Annuler"
@@ -70,3 +71,7 @@ msgstr "Rapports/Courriers"
 msgctxt "wizard_button:claim_reporting.claim,result,end:"
 msgid "Ok"
 msgstr "Ok"
+
+msgctxt "model:report.template,name:ddefault_claim_reporting_template"
+msgid "Claim Reporting"
+msgstr "Stock sinistres"
