--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -151,6 +151,14 @@ msgstr ""
 
 msgctxt "error:claim.indemnification:"
 msgid ""
+"Scheduling is blocked for indemnification %(indemnification)s, contract "
+"%(contract)s is not activated"
+msgstr ""
+"L'ordonnancement est bloqué pour l'indemnisation %(indemnification)s, le "
+"contrat %(contract)s n'est pas actif"
+
+msgctxt "error:claim.indemnification:"
+msgid ""
 "The following indemnification period(s) duplicates the period to schedule "
 "(same benefit, loss and option):"
 msgstr ""
