--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10708 Don't allow to schedule indemnification linked to a contract in quote status (in case of migration)
 * OTH#0000 Remove mixed view in claim control / validation wizards for performances purposes
 * FEA#10531 Add wizard and batch to check claim migrated datas (indemnification computation)
 * BUG#10587 Improve performances when detecting payment status of an indemnification
